swagger kész
