# controllers/bestController.js
@@ -1,5 +1,5 @@
-import { get } from "curl";
 import pool from "../database/database.js";
+import fs from "fs/promises";
 
 const getBests = async (req, res) => {
   let [rows] = await pool.query("select * from legjobbak;");
@@ -7,7 +7,7 @@ const getBests = async (req, res) => {
 };
 const addBest = async (req, res) => {
   const nev = req.body.nev;
-  if (!nev) return res.status(406).json({ err: "Meg kell adnia a nevet!" });
+  if (!nev) return res.status(400).json({ err: "Meg kell adnia a nevet!" });
 
   let [row] = await pool.query(`select * from legjobbak where nev = '${nev}'`);
   if (row.length > 0)
@@ -25,27 +25,49 @@ const addBest = async (req, res) => {
     .json({ err: "Az előadó nem került fel a rendszerbe!" });
 };
 const deleteBest = async (req, res) => {
-  const nev = req.body.nev;
-  if (!nev) return res.status(406).json({ err: "Adja meg az előadó nevét!" });
-
+  const nev = parseInt(req.params.nev);
+  if (!nev) {
+    return res.status(400).json({ err: "Adja meg az előadó nevét!" });
+  }
   const [rows] = await pool.query(`delete from legjobbak where nev='${nev}';`);
   if (rows.affectedRows > 0)
     return res.status(202).json({ msg: "A törlés sikeres!" });
-  else return res.status(200).json({ msg: "Nem található ilyen előadó!" });
+  else return res.status(406).json({ msg: "Nem található ilyen előadó!" });
 };
 const updateBest = async (req, res) => {
   const regi_nev = req.body.regi_nev;
   const uj_nev = req.body.uj_nev;
   if (!regi_nev)
-    return res.status(406).json({ err: "Adja meg az előadó régi nevét!" });
+    return res.status(400).json({ err: "Adja meg az előadó régi nevét!" });
   if (!uj_nev)
-    return res.status(406).json({ err: "Adja meg az előadó új nevét!" });
+    return res.status(400).json({ err: "Adja meg az előadó új nevét!" });
   const [rows] = await pool.query(
     `update legjobbak set nev='${uj_nev}' where nev='${regi_nev}';`
   );
   if (rows.affectedRows > 0)
     return res.status(202).json({ msg: "A módosítás sikeres!" });
-  else return res.status(200).json({ msg: "Nem található ilyen előadó!" });
+  else return res.status(406).json({ msg: "Nem található ilyen előadó!" });
+};
+const bestOfArtists = async (req, res) => {
+  let sorok = [];
+  const [rows] = await pool.query(
+    `select * from zenek where zenek.eloado in (select nev from legjobbak);`
+  );
+  // if (rows.length > 0) {
+  //   for (let i = 0; i < rows.length; i++) {
+  //     sorok[i] = {};
+  //     sorok[i].id = rows[i].id;
+  //     sorok[i].cim = rows[i].cim;
+  //     sorok[i].eloado = rows[i].eloado;
+  //     sorok[i].mufaj = rows[i].mufaj;
+  //     sorok[i].hossz = rows[i].hossz;
+  //     sorok[i].kiadas = rows[i].kiadas;
+  //     const data = await fs.readFile(rows[i].elokep);
+  //     sorok[i].elokep = data.toString("base64");
+  //   }
+  // }
+  // return res.status(200).json(sorok);
+  return res.status(200).json(rows);
 };
 
-export { getBests, addBest, deleteBest, updateBest };
+export { getBests, addBest, deleteBest, updateBest, bestOfArtists };
