# routes/bestRoutes.js
@@ -5,6 +5,7 @@ import {
   deleteBest,
   getBests,
   updateBest,
+  bestOfArtists,
 } from "../controllers/bestController.js";
 const router = express.Router();
 
@@ -12,4 +13,5 @@ router.get("/getBests", getBests);
 router.post("/addBest", validateToken, addBest);
 router.delete("/deleteBest", validateToken, deleteBest);
 router.put("/updateBest", validateToken, updateBest);
+router.get("/bestofartists", bestOfArtists);
 export default router;
