# routes/musicRoutes.js
@@ -2,7 +2,6 @@ import express from "express";
 import { validateToken } from "../middleware/validateTokenHandler.js";
 import {
   addMusic,
-  bestOfArtists,
   deleteMusic,
   getMusic,
   updateMusic,
@@ -11,7 +10,6 @@ import {
 const router = express.Router();
 router.post("/addMusic", validateToken, addMusic);
 router.get("/getMusic", getMusic);
-router.delete("/deleteMusic", validateToken, deleteMusic);
+router.delete("/deleteMusic/:id", validateToken, deleteMusic);
 router.put("/updateMusic", validateToken, updateMusic);
-router.get("/bestOfArtists", bestOfArtists);
 export default router;
